--- a/_quarto.yml
+++ b/_quarto.yml
@@ -268,6 +268,7 @@ format:
   html:
     toc: true
     theme:
+      dark: darkly
       light: [cosmo, theme.scss]
     code-copy: true
     code-overflow: wrap
