--- a/docs/personal/carousel.yml
+++ b/docs/personal/carousel.yml
@@ -1,38 +1,38 @@
 - caption: "Childhood (2000)"
-  image: "/images/bush.jpg"
+  image: "/images/memorylane/bush.jpg"
   link: "https://en.wikipedia.org/wiki/George_W._Bush"
 
 - caption: "Hobbies (2002)"
-  image: "/images/childpiano.jpg"
+  image: "/images/memorylane/childpiano.jpg"
   link: "https://en.wikipedia.org/wiki/Jingle_Bell_Rock"
 
 - caption: "Maine (2006)"
-  image: "/images/maine.jpg"
+  image: "/images/memorylane/maine.jpg"
   link: "https://en.wikipedia.org/wiki/Damariscotta_Lake"
 
 - caption: "High school graduation, hours before irreparably setting my arm on fire (2010)"
-  image: "/images/fire.jpg"
+  image: "/images/memorylane/fire.jpg"
   link: "https://en.wikipedia.org/wiki/Burn#By_depth"
 
 - caption: "Keeping in touch with high school people, one year later (2011)"
-  image: "/images/keeping_touch.jpg"
+  image: "/images/memorylane/keeping_touch.jpg"
   link: "https://en.wikipedia.org/wiki/Party"
 
 - caption: "Freshman (2011)"
-  image: "/images/freshman.jpg"
+  image: "/images/memorylane/freshman.jpg"
   link: "https://en.wikipedia.org/wiki/Super_Smash_Bros._(video_game)"
 
 - caption: "Fashion exposé (2014)"
-  image: "/images/fashion.jpg"
+  image: "/images/memorylane/fashion.jpg"
   link: "https://dartmouthfashioncouncildotcom.wordpress.com/2014/05/06/street-style-ft-kris-brown-14/"
 
 - caption: "Various online personalities (2011-2015)"
-  image: "/images/bab.jpg"
+  image: "/images/memorylane/bab.jpg"
   link: "https://en.wikipedia.org/wiki/Boredat"
 
 
 - caption: "At America's first karaoke bar (Dimples) shortly before it shut down (2014)"
-  image: "/images/karaoke.jpg"
+  image: "/images/memorylane/karaoke.jpg"
   link: "https://en.wikipedia.org/wiki/Rocky_Raccoon"
 
 
